# frick-dmca-client

./: .gitignore  .gitmodules  Cargo.toml  build.rs  css.js  index.html  js.js  wasm.js
.github/: main.yml
.github/workflows/: deploy.yml
assets/: wasm-d63e9c44.wasm
src/: main.rs
wasm/: .stylelintrc.json  Cargo.toml  package.json  rollup-plugin-html.js  rollup.config.js
wasm/css/: app.css
wasm/js/: index.js
wasm/src/: debug.rs  fetch.rs  hls.rs  lib.rs  model.rs  soundcloud.rs  youtube.rs
wasm/src/providers/: common.rs  mod.rs  soundcloud.rs  youtube.rs
wasm/styles/: app.css
