[package]
name = "FrickDMCA"
version = "0.1.7"
authors = ["OhmRee <13455401+ohmree@users.noreply.github.com>"]
edition = "2018"

[dependencies]
web-view = { git = "https://github.com/ohmree/web-view.git" }
rust-embed = { version = "5.6.0", features = ["compression"] }
simple-eyre = "0.3.0"

# [build-dependencies]
# wasm = { path = "./wasm" }
