[package]
name = "frick-dmca"
version = "0.2.0"
authors = ["OhmRee <13455401+ohmree@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rust-embed = { version = "5.6.0", features = ["compression", "interpolate-folder-path"] }
color-eyre = "0.5.10"
web-view = { version = "0.7.2", features = ["edge"] }

[build-dependencies]
color-eyre = "0.5.10"
