[package]
name = "wasm"
version = "0.1.0"
authors = ["OhmRee <13455401+ohmree@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = { version = "0.2.0", optional = true, features = ["color"] }
log = { version = "0.4.11", optional = true }
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
yew = { git = "https://github.com/yewstack/yew.git" }
simple-eyre = "0.3.0"
nanoserde = "0.1.21"

[features]
default = []
debug = ["console_log", "log"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
