[package]
name = "learning-percy"
version = "0.1.0"
authors = ["OhmRee <13455401+ohmree@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.4.2"
seed = "0.8.0"
simple-eyre = "0.3.0"

[features]
default = ["soundcloud"]
soundcloud = []
