[package]
name = "wasm"
version = "0.2.1"
authors = ["OhmRee <13455401+ohmree@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.42"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2.0", features = ["color"] }
getset = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.4.2"
seed = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
simple-eyre = "0.3.0"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "HtmlAudioElement",
    "HtmlMediaElement",
    "HtmlSourceElement"
]

[features]
default = ["soundcloud"]
soundcloud = []
